Fix layout issues w/ element source buttons. Bump to 2.0.1

--- a/src/web/assets/cpfieldinspect.css
+++ b/src/web/assets/cpfieldinspect.css
@@ -15,7 +15,7 @@
 }
 
 #details-container .cp-field-inspect-sourcebtn-wrapper {
-    margin-top: 20px;
+    padding-top: 20px;
     padding-bottom: 20px;
 }
 
